# circle

./: Cargo.toml  LICENSE  README.md  package.json
crates/capture/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/encoder/: Cargo.toml
crates/socket/: Cargo.toml  README.md  USAGE.md
crates/socket/examples/: socket_example.rs
crates/socket/src/: lib.rs
crates/socket/tests/: socket_tests.rs
