[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["shaik-zeeshan <shaikzeeshan999@gmail.com>"]
license = "MIT"
repository = "https://github.com/shaik-zeeshan/circle"
homepage = "https://github.com/shaik-zeeshan/circle"

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.145"

tokio = "1.48.0"

thiserror = "2.0.17"

tracing = "0.1.43"
tracing-subscriber = "0.3.22"


chrono = "0.4.42"
