[package]
name = "socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unix socket communication utilities for Circle CLI"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
chrono.workspace = true
tracing-subscriber.workspace = true

[lib]
path = "src/lib.rs"
